# manimlib-creation-package

./: CONDA_CI_FIX_SUMMARY.md  Demo_ShowSubmobjectsOneByOne.py  FINAL_CONDA_CI_FIX_REPORT.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_NOTES.md  LICENSE  PROJECT_OVERVIEW.md  README.md  README_creation.md  RELEASE_NOTES_v1.0.0.md  creation.py  environment.yml  final_check.py  integrity_check_report.json  prepare_github_release.py  pyproject.toml  requirements_creation.txt  setup_creation.py  test_creation.py  test_github_actions_fix.py  test_github_actions_fix_conda.py  test_package_install.py  update_github_urls.py  update_urls_to_actual.py
.github/: GITHUB_ACTIONS_GUIDE.md
.github/workflows/: ci.yml  docs.yml  python-package-conda.yml  python-package.yml  quick-fix-test.yml  quick-test.yml  release.yml  security-and-deps.yml  simple-ci.yml  template.yml
creationbuild_package/: CHANGELOG.md  LICENSE  README_creation.md  environment.yml  meta.yaml  pyproject.toml  requirements_creation.txt
creationbuild_package/manimlib_creation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
creationbuild_package/中文输出文档/: Demo_ShowSubmobjectsOneByOne.py  README.md  test_chinese_encoding.py  中文显示修复说明.md
examples/: basic_example.py
release_1754234283/: README.md  STARTUP_GUIDE.md  auto_setup.py  dependency_manager.py  quick_start.py  requirements_creation.txt  setup_creation.py  test_installation.py
release_1754234283/.github/workflows/: README.md  quick-test.yml  security-and-deps.yml  template.yml
release_1754234283/creationbuild_package/: INSTALL_GUIDE.md  meta.yaml  requirements_creation.txt  setup_creation.py  test_creation.py
